tests/fixtures/invalid/pow_dict_bool_list.py
# Cannot call pow() with Dict[str, int], Bool, List[int]
x = pow({"a": 1}, True, [1, 2, 3])
